Player component refactoring

--- a/src/components/Player/styles.module.scss
+++ b/src/components/Player/styles.module.scss
@@ -25,7 +25,7 @@
   footer {
     align-self: stretch;
 
-    &.empty {
+    &.empty .progress {
       opacity: 0.5;
     }
   }
@@ -57,7 +57,11 @@
   height: 20rem;
   border: 1.5px dashed var(--purple-300);
   border-radius: 1.5rem;
-  background: linear-gradient(143.8deg, rgba(145, 100, 250, 0.8) 0%, rgba(0, 0, 0, 0) 100%);
+  background: linear-gradient(
+    143.8deg,
+    rgba(145, 100, 250, 0.8) 0%,
+    rgba(0, 0, 0, 0) 100%
+  );
 
   padding: 4rem;
   text-align: center;
@@ -103,6 +107,7 @@
 
     &:disabled {
       cursor: default;
+      opacity: 0.5;
     }
 
     &:hover:not(:disabled) {
