--- a/src/components/Player/styles.module.scss
+++ b/src/components/Player/styles.module.scss
@@ -38,7 +38,7 @@
   }
 
   strong {
-    display: flex;
+    display: block;
     margin-top: 2rem;
     font: 600 1.25rem "Lexend", sans-serif;
     line-height: 1.75rem;
@@ -112,6 +112,14 @@
 
     &:hover:not(:disabled) {
       filter: brightness(0.7);
+    }
+
+    &.isActive {
+      filter: invert(0.35) sepia(1) saturate(3) hue-rotate(100deg);
+    }
+
+    &.isActive:hover {
+      filter: brightness(0.6) invert(0.35) sepia(1) saturate(3) hue-rotate(100deg);
     }
 
     &.playButton {
